@startuml entity-classes

package trilium_alchemy.core <<Frame>> {
  class BaseEntity {
  }

  class Note {
  }

  class BaseDeclarativeNote {
  }

  class BaseDeclarativeMixin {
  }

  class BaseAttribute {
  }

  class Label {
  }

  class Relation {
  }

  class Branch {
  }

  BaseEntity <|-- Note
  BaseEntity <|-- BaseAttribute
  BaseEntity <|-- Branch

  Note <|-- BaseDeclarativeNote
  BaseDeclarativeMixin <|-- BaseDeclarativeNote

  BaseAttribute <|-- Label
  BaseAttribute <|-- Relation
}

@enduml